:poop:add fig4 with error

--- a/configs/fig4.yaml
+++ b/configs/fig4.yaml
@@ -1,21 +1,23 @@
 base:
   img_path: "../assets/building.jpg"
   # mask_path: "../assets/string.jpg"
-  obs_p: 0.3  # 1 - obs_p = mask percent
+  obs_p: 0.5  # 1 - obs_p = mask percent
   save_dir: "../output/fig4/"
   fig_name: "fig4"
 
-# outer_iter    : 10   
-# outer_tol     : 1e-3  
-# admm_iter     : 30    
-# admm_tol      : 1e-4   
-# admm_rho      : 5e-2   
-# apgl_iter     : 30    
-# apgl_tol      : 1e-4   
+outer_iter    : 100
+outer_tol     : 1e-3
+# admm_iter     : 30
+# admm_tol      : 1e-4
+# admm_rho      : 5e-2
+# apgl_iter     : 30
+# apgl_tol      : 1e-4
 # apgl_lambda   : 5e-2
-admmap_iter   : 30  
-admmap_tol    : 1e-4 
-admmap_rho    : 2    
+admmap_iter   : 200
+admmap_tol    : 1e-4
+admmap_rho    : 2
 admmap_kappa  : 1e-3
-admmap_beta   : 1 
+admmap_beta   : 1
 admmap_betamax: 1e10
+min_R         : 1
+max_R         : 20
