:poop:add fig5 with error

--- a/configs/fig5.yaml
+++ b/configs/fig5.yaml
@@ -1,18 +1,22 @@
 base:
+  tol: 1e-4
+  max_iter: 1000
   img_path: "../assets/building.jpg"
   # mask_path: "../assets/string.jpg"
   obs_p: 0.5  # 1 - obs_p = mask percent
-  save_dir: "../output/fig4/"
-  fig_name: "fig4"
+  save_dir: "../output/fig5/"
+  fig_name: "fig5"
+
+
 
 outer_iter    : 100
 outer_tol     : 1e-3
-# admm_iter     : 30
-# admm_tol      : 1e-4
-# admm_rho      : 5e-2
-# apgl_iter     : 30
-# apgl_tol      : 1e-4
-# apgl_lambda   : 5e-2
+admm_iter     : 200
+admm_tol      : 1e-4
+admm_rho      : 5e-2
+apgl_iter     : 200
+apgl_tol      : 1e-4
+apgl_lambda   : 5e-2
 admmap_iter   : 200
 admmap_tol    : 1e-4
 admmap_rho    : 1.9
