--- a/configs/fig7_8.yaml
+++ b/configs/fig7_8.yaml
@@ -11,18 +11,20 @@ base:
     - "fig8"
   tol: 1e-4
   max_iter: 1000
-  r0: 20
-  SVT_power: 0.5
+  r0: 7
+  SVT_power: 0.75
   delta_2k : 0.29
+  opt_tau  : 1e-1
+
 clip_type  : 0 # 0 -> no 1 -> uint8 2 -> 0~1
 outer_iter : 100
 outer_tol  : 1e-3  
 inner_iter : 100
 tol        : 1e-4
 rho0       : 1.01
-lambda     : 1e-2
+lambda     : 1e-3
 kappa      : 1e-3
-beta       : 1
+beta       : 1e-3
 beta_max   : 1e10
 min_R      : 10
 max_R      : 10
