--- a/configs/fig9.yaml
+++ b/configs/fig9.yaml
@@ -7,14 +7,15 @@ base:
   max_iter: 1000
   r0: 3
   SVT_power: 0.5
-  delta_2k : 0.1
+  delta_2k : 0.2
+  opt_tau  : 1e-3
 clip_type  : 0 # 0 -> no 1 -> uint8 2 -> 0~1
 outer_iter : 100
-outer_tol  : 1e-3  
+outer_tol  : 1e-3
 inner_iter : 100
 tol        : 1e-4
 rho0       : 1.01
-lambda     : 1e-2
+lambda     : 0.05
 kappa      : 1e-3
 beta       : 1
 beta_max   : 1e10
